--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_TEMPLATE_CLIENT_ID = c28d123f9fb2f725c2e9801ee7839cc8
+VITE_THIRDWEB_CLIENT_ID=e60dde003efdd8c0f5fc1d27a540cb66
+VITE_THIRDWEB_CHAIN=sepolia  
+
