--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,15 @@ dist-ssr
 *.sw?
 
 .env
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
