--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/contracts": "^5.4.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "ethers": "^5.8.0",
     "globals": "^16.4.0",
+    "hardhat": "^2.26.3",
     "vite": "^7.1.7"
   }
 }
