--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "dotenv": "^17.2.2",
+    "helmet": "^8.1.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
+    "react-router": "^7.9.3",
     "react-router-dom": "^7.9.3",
-    "thirdweb": "^5.108.3"
+    "thirdweb": "^5.108.3",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
